[gd_scene load_steps=6 format=3 uid="uid://bq1sudbvnfsss"]

[ext_resource type="Script" uid="uid://cqqk21ugou4rp" path="res://main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://3rw2ywvrh6jw" path="res://assets/character.glb" id="2_r0du0"]
[ext_resource type="Texture2D" uid="uid://blpsksmifdmbk" path="res://assets/button.png" id="4"]

[sub_resource type="PlaneMesh" id="PlaneMesh_001"]
size = Vector2(10, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_b1b2c"]
size = Vector3(10, 0.5, 10)

[node name="Main" type="Node3D"]
script = ExtResource("1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 5)

[node name="PlayerMesh" type="Node3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 1, 0)

[node name="character" parent="PlayerMesh" instance=ExtResource("2_r0du0")]

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 2, 5)
current = true

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_001")

[node name="GroundCollision" type="StaticBody3D" parent="Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/GroundCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
shape = SubResource("BoxShape3D_b1b2c")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="InventoryButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 900.0
offset_top = 50.0
offset_right = 1200.0
offset_bottom = 200.0
text = "Inventaire"
icon = ExtResource("4")

[node name="ExploreButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 900.0
offset_top = 250.0
offset_right = 1200.0
offset_bottom = 400.0
text = "Explorer"
icon = ExtResource("4")

[node name="ArenaButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 900.0
offset_top = 450.0
offset_right = 1200.0
offset_bottom = 600.0
text = "Ar√®ne"
icon = ExtResource("4")
